refactor: clean up nginx configuration for better readability and organization

--- a/yuka-dashboard/nginx.conf
+++ b/yuka-dashboard/nginx.conf
@@ -1,28 +1,25 @@
 server {
-  listen 80;
+    listen 80;
+    server_name yukayantra.com www.yukayantra.com;
+    root /usr/share/nginx/html;
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+    location ~* \.(?:css|js)$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        expires -1;
+    }
 
-  # Set the root directory to where your built React files are.
-  # This path is inside the Docker container.
-  root /usr/share/nginx/html;
+    location /api/ {
+        proxy_pass http://127.0.0.1:5000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
-  # This is the main configuration for handling SPA routing.
-  # It will try to find a file that matches the URI, then a directory.
-  # If neither exists, it will fall back to serving /index.html.
-  location / {
-    try_files $uri $uri/ /index.html;
-  }
-
-  # Optional: Add headers to prevent caching issues,
-  # especially important during development and deployment.
-  location ~* \.(?:css|js)$ {
-    add_header Cache-Control "no-cache, no-store, must-revalidate";
-    expires -1;
-  }
-
-  # Optional: Handle gzipping to speed up your site
-  gzip on;
-  gzip_vary on;
-  gzip_proxied any;
-  gzip_comp_level 6;
-  gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
 }
