--- a/yuka-dashboard/nginx.conf
+++ b/yuka-dashboard/nginx.conf
@@ -2,9 +2,11 @@ server {
     listen 80;
     server_name yukayantra.com www.yukayantra.com;
     root /usr/share/nginx/html;
+
     location / {
         try_files $uri $uri/ /index.html;
     }
+
     location ~* \.(?:css|js)$ {
         add_header Cache-Control "no-cache, no-store, must-revalidate";
         expires -1;
@@ -15,6 +17,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     gzip on;
