--- a/techknowgreen-live-api/package.json
+++ b/techknowgreen-live-api/package.json
@@ -4,17 +4,20 @@
   "type": "module",
   "description": "",
   "main": "index.js",
- "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-},
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mqtt": "^5.14.1"
+    "mongodb": "^7.0.0",
+    "mqtt": "^5.14.1",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
